# flask-rest-api

./: .gitignore  Dockerfile  pyproject.toml
backend/: app.py
backend/controller/: bridge_controller.py  datasource.py
backend/domain/: BioGas.py  HydroPower.py  Plant.py  SolarEnergy.py  ThermalEnergy.py  WindPower.py
backend/domain/use_cases/: get_generation_plant.py  get_plants.py  type_generation.py
